style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');

:root {
	scroll-behavior: smooth;
	--skin-color: rgb(253, 38, 0);
	--bg-black-900: #f2f2fc;
	--bg-black-100: #fdf9ff;
	--bg-black-50: #e8dfec;
	--text-black-900: #302e4d;
	--text-black-700: #504e70;
}
body.dark {
	--bg-black-900: #151515;
	--bg-black-100: #222222;
	--bg-black-50: #454346;
	--text-black-900: #ffffff;
	--text-black-700: #e9e9e9;
}
body {
	margin: 0;
	padding: 0;
	line-height: 1.5;
	font-size: 16px;
	font-family: 'Oswald', sans-serif;
	background-color: var(--bg-black-900);
}
* {
	margin: 0;
	padding: 0;
	outline: none;
	text-decoration: none;
	box-sizing: border-box;
}
::before,
::after {
	box-sizing: border-box;
}
ul {
	list-style: none;
}
.section {
	background: var(--bg-black-900);
	min-height: 100vh;
	display: block;
	padding: 0 30px;
	opacity: 1;
}

.container {
	max-width: 1100px;
	width: 100%;
	margin: auto;
}
.section .container {
	padding-top: 120px;
	padding-bottom: 20px;
}
.name {
	color: var(--skin-color);
}
.section-title {
	flex: 0 0 100%;
	max-width: 100%;
	margin-bottom: 60px;
}
.section-title h2 {
	font-size: 40px;
	color: var(--text-black-900);
	font-weight: 700;
	position: relative;
}

.section-title h2::before {
	content: '';
	height: 4px;
	width: 50px;
	background-color: var(--skin-color);
	position: absolute;
	top: 100%;
	left: 0%;
}
.section-title h2::after {
	content: '';
	height: 4px;
	width: 25px;
	background-color: var(--skin-color);
	position: absolute;
	top: 100%;
	left: 0%;
	margin-top: 8px;
}
.row {
	display: flex;
	flex-wrap: wrap;
	margin-left: -15px;
	margin-right: 15px;
	position: relative;
}
.padd-15 {
	padding-left: 15px;
	padding-right: 15px;
}

.btn {
	font-size: 16px;
	font-weight: 500;
	padding: 12px 35px;
	color: wheat;
	border-radius: 40px;
	display: inline-block;
	border: none;
	white-space: nowrap;
	background: var(--skin-color);
}
.btn:hover {
	background: rgb(252, 83, 5);
	transition: all 0.2s ease;
	transform: scale(1.2);
}
.shadow-dark {
	box-shadow: 0 0 20px rgba(14, 8, 8, 0.15);
}
.aside {
	width: 100%;
	background-color: var(--bg-black-100);
	position: sticky;
	top: 0;
	height: 100%;
	box-shadow: 0px 1px 13px var(--skin-color);
	display: inline-block;
	justify-content: center;
	align-items: center;
	z-index: 1;
}
.aside .logo {
	position: absolute;
	top: 30px;
	font-size: 20px;
	text-transform: capitalize;
}
.aside .logo a {
	font-family: 'Dancing Script', cursive;
	color: var(--text-black-900);
	font-weight: 700;
	margin-left: 60px;
	padding: 15px 20px;
	font-size: 30px;
	letter-spacing: 5px;
	position: relative;
}

.aside .logo a::before {
	content: '';
	position: absolute;
	width: 20px;
	height: 20px;
	border-bottom: 5px solid var(--skin-color);
	border-left: 5px solid var(--skin-color);
	bottom: 0;
	left: 0;
}
.aside .logo a::after {
	content: '';
	position: absolute;
	width: 20px;
	height: 20px;
	border-top: 5px solid var(--skin-color);
	border-right: 5px solid var(--skin-color);
	top: 0;
	right: 0;
}
.aside .nav-toggler {
	height: 40px;
	width: 100%;
	border: 1px solid var(--bg-black-50);
	cursor: pointer;
	position: fixed;
	left: 32px;
	top: 44px;
	border-radius: 50%;
	background: var(--bg-black-100);
	display: none;
	align-items: center;
	justify-content: center;
	-webkit-appearance: none;
	-moz-appearance: none;
	z-index: 2;
	outline: none;
}
.aside .nav-toggler.is-active {
	-webkit-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	transition: all 0.3s ease-in-out;
	-webkit-transition-delay: 0.6s;
	-o-transition-delay: 0.6s;
	transition-delay: 0.6s;
	-webkit-transform: rotate(45deg);
	-ms-transform: rotate(45deg);
	-o-transform: rotate(45deg);
	transform: rotate(45deg);
}

.aside .nav-toggler .line-uno {
	height: 2px;
	width: 18px;
	background: var(--skin-color);
	display: inline-block;
	position: relative;
	transition: all 0.3s;
}
.aside .nav-toggler .line-tres {
	content: '';
	height: 2px;
	width: 18px;
	background: var(--skin-color);
	position: absolute;
	top: 25px;
	left: 10px;
	transition: all 0.3s;
}
.aside .nav-toggler .line-duo {
	content: '';
	height: 2px;
	width: 18px;
	background: var(--skin-color);
	position: absolute;
	top: 10px;
	left: 10px;
	transition: all 0.3s;
}
.aside .nav-toggler.is-active .line-uno {
	width: 0px;
}

.aside .nav-toggler.is-active .line-duo,
.aside .nav-toggler.is-active .line-tres {
	-webkit-transition-delay: 0.3s;
	-o-transition-delay: 0.3s;
	transition-delay: 0.3s;
}

.aside .nav-toggler.is-active .line-duo {
	-webkit-transform: translateY(9px);
	-ms-transform: translateY(9px);
	-o-transform: translateY(9px);
	transform: translateY(9px);
}

.aside .nav-toggler.is-active .line-tres {
	-webkit-transform: translateY(-6px) rotate(90deg);
	-ms-transform: translateY(-6px) rotate(90deg);
	-o-transform: translateY(-6x) rotate(90deg);
	transform: translateY(-6px) rotate(90deg);
}
.aside .nav {
	margin-top: 32px;
	margin-left: 500px;
}
.aside .nav li {
	margin-bottom: 20px;
	display: inline-block;
	line-height: 50px;
}
.aside .nav li a {
	font-size: 22px;
	font-weight: 600;
	margin-left: 60px;
	border-bottom: 1px solid var(--bg-black-50);
	color: var(--text-black-900);
	padding: 5px 5px;
}
.aside .nav li a:hover {
	color: var(--skin-color);
}
.aside .nav li a.active {
	color: var(--skin-color);
	border-bottom: 1px solid var(--skin-color);
	padding: 0;
	font-size: 22px;
	font-weight: 600;
	padding: 5px 5px;
}
/*home */
.home {
	min-height: 100vh;
	display: flex;
	color: var(--text-black-900);
}

.home .home-info {
	flex: 0 0 60%;
	max-width: 60%;
}
h3.hello {
	font-size: 25px;
	margin: 15px 0;
}
h3.hello span {
	font-family: 'Dancing Script', cursive;
	font-size: 27px;
}
h3.my-profession {
	font-size: 30px;
	margin: 15px 0;
}
.typing {
	color: var(--skin-color);
}
.home-info p {
	margin-bottom: 70px;
	font-size: 20px;
	color: var(--text-black-700);
}
/* ... */

